frontend/src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;
:root {
  --background: #3a3a3a;
  --foreground: #fafafa;
}
html.light {
  --layout: #f0f0f0;
  --mainContent: #eaeaea: ;
  --background: var(--foreground);
  --button: #139dffa6;
  --textButton: #ffffff;
  --fontColor: #090a0a;
  --inputBackground: #fff;
  --popupLanguage: #fff;

  /* Component Topic Card */
  --textTopicCardWithoutSelect: #000;
  --textTopicCardSelected: #fff;
  --bgTopicCardWithoutSelect: #fff;
  --bgTopicCardSelected: #2b2b2b;

  /* Component Category Card */
  --textCategoryCardWithoutSelect: #8495a1;
  --textCategoryCardSelect: #000;
  --bgCategoryCardWithoutSelect: #fff;
  --bgCategoryCardSelect: rgba(173, 216, 255, 0.15);
  --noficationBg: #ffffff;
  --divideBg: #e5e7eb;
  --hoverBg: #f3f4f6;

  /* Layout Page */
  --bgMainLayout: rgba(210, 6, 6, 0.1);
  --iconBlur: #979c9e;

  /* Background SVG Generate Logo */
  --bgSVGGenerate: rgba(169, 174, 187, 0.08);

  /* Background loading indicator*/
  --bgLoadingIndicator: rgba(255, 255, 255, 0.8);
}
html.dark {
  --layout: #f0f0f0;
  --mainContent: #eaeaea: ;
  --background: var(--foreground);
  --button: #139dffa6;
  --textButton: #ffffff;
  --fontColor: #090a0a;
  --inputBackground: #fff;
  --popupLanguage: #fff;

  /* Component Topic Card */
  --textTopicCardWithoutSelect: #000;
  --textTopicCardSelected: #fff;
  --bgTopicCardWithoutSelect: #fff;
  --bgTopicCardSelected: #2b2b2b;

  /* Component Category Card */
  --textCategoryCardWithoutSelect: #8495a1;
  --textCategoryCardSelect: #000;
  --bgCategoryCardWithoutSelect: #fff;
  --bgCategoryCardSelect: rgba(173, 216, 255, 0.15);
  --noficationBg: #ffffff;
  --divideBg: #e5e7eb;
  --hoverBg: #f3f4f6;

  /* Layout Page */
  --bgMainLayout: rgba(210, 6, 6, 0.1);
  --iconBlur: #979c9e;

  /* Background SVG Generate Logo */
  --bgSVGGenerate: rgba(169, 174, 187, 0.08);

  /* Background loading indicator*/
  --bgLoadingIndicator: rgba(255, 255, 255, 0.8);
}
/* html.dark {
  --bgLoadingIndicator: rgba(255, 255, 255, 0.8);

  --bgSVGGenerate: rgba(169, 174, 187, 0.08);
  --bgMainLayout: rgba(255, 255, 255, 0.20);
  --popupLanguage: #1a1a2e;
  --layout: #2b2b2b;
  --mainContent:#3A3A3A;
  --background: var(--background);
  --button: #fff;
  --textButton: #000;
  --fontColor: #fff;
  --inputBackground: #4b4b4b;

  /* Component Topic Card */
  /*--textTopicCardWithoutSelect: #fff;
  --bgTopicCardWithoutSelect: rgba(255, 255, 255, 0.2);
  --textTopicCardSelected: #000;
  --bgTopicCardSelected: #fff;

/* Component Category Card */
/*--textCategoryCardWithoutSelect: #fff;
--textCategoryCardSelect: #8495a1;
--bgCategoryCardWithoutSelect: rgba(173, 216, 255, 0.15);
--bgCategoryCardSelect: #fff;
--noficationBg: #000000;
--divideBg: #374151;
--hoverBg: #4b5563;
--iconBlur: #fff;
/*}
/* @media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
  }
} */

body {
  color: var(--foreground);
  background: var(--background);
  font-family: Arial, Helvetica, sans-serif;
}

@layer utilities {
  .text-balance {
    text-wrap: balance;
  }
}

@layer base {
  :root {
    --background: 0 0% 100%;
    --foreground: 0 0% 3.9%;
    --card: 0 0% 100%;
    --card-foreground: 0 0% 3.9%;
    --popover: 0 0% 100%;
    --popover-foreground: 0 0% 3.9%;
    --primary: 0 0% 9%;
    --primary-foreground: 0 0% 98%;
    --secondary: 0 0% 96.1%;
    --secondary-foreground: 0 0% 9%;
    --muted: 0 0% 96.1%;
    --muted-foreground: 0 0% 45.1%;
    --accent: 0 0% 96.1%;
    --accent-foreground: 0 0% 9%;
    --destructive: 0 84.2% 60.2%;
    --destructive-foreground: 0 0% 98%;
    --border: 0 0% 89.8%;
    --input: 0 0% 89.8%;
    --ring: 0 0% 3.9%;
    --chart-1: 12 76% 61%;
    --chart-2: 173 58% 39%;
    --chart-3: 197 37% 24%;
    --chart-4: 43 74% 66%;
    --chart-5: 27 87% 67%;
    --radius: 0.5rem;
  }
  /* .dark {
    --background: 0 0% 3.9%;
    --foreground: 0 0% 98%;
    --card: 0 0% 3.9%;
    --card-foreground: 0 0% 98%;
    --popover: 0 0% 3.9%;
    --popover-foreground: 0 0% 98%;
    --primary: 0 0% 98%;
    --primary-foreground: 0 0% 9%;
    --secondary: 0 0% 14.9%;
    --secondary-foreground: 0 0% 98%;
    --muted: 0 0% 14.9%;
    --muted-foreground: 0 0% 63.9%;
    --accent: 0 0% 14.9%;
    --accent-foreground: 0 0% 98%;
    --destructive: 0 62.8% 30.6%;
    --destructive-foreground: 0 0% 98%;
    --border: 0 0% 14.9%;
    --input: 0 0% 14.9%;
    --ring: 0 0% 83.1%;
    --chart-1: 220 70% 50%;
    --chart-2: 160 60% 45%;
    --chart-3: 30 80% 55%;
    --chart-4: 280 65% 60%;
    --chart-5: 340 75% 55%;
  } */
}

@layer base {
  * {
    @apply border-border;
  }
  body {
    @apply bg-background text-foreground;
  }
}
::-webkit-scrollbar {
  width: 6px;
  height: 4px;
}

/* Track */
::-webkit-scrollbar-track {
  background: #f1f1f1;
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: #888;
  border-radius: 15px;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: #555;
}
input:-webkit-autofill,
input:-webkit-autofill:hover,
input:-webkit-autofill:focus,
input:-webkit-autofill:active {
  -webkit-background-clip: text;
  transition: background-color 5000s ease-in-out 0s;
  box-shadow: inset 0 0 20px 20px #23232300;
}

